# pygame-manager

./: LICENCE  README.md  pyproject.toml
manager/: __init__.py  event.py  game.py  interface.py  utils.py
pygame_manager/: __init__.py  _interface.py  event.py  exceptions.py  frame.py  game.py  group.py  interface.py  types.py  utils.py
