[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygame-manager"
version = "1.0.1"
description = "Gerenciador para jogos desenvolvidos com PyGame"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "pygame >=2.1.3",
]

[project.urls]
Repository = "https://github.com/seu-user/pygame-manager"

[tool.setuptools]
packages = ["pygame_manager"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
